# subsync_translate

./: README.md  pyproject.toml  requirements.txt  subsync_translate.py
tests/resources/: input.srt  reference.srt
